--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="#">
-                                <img src="./assets/images/Logo.PNG" width="180px;" alt="Logo">
+                                <img src="Logo.PNG" width="180px;" alt="Logo">
                             </a>
 
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
