--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Base - Tailwind CSS Startup Template</title>
+    <title>Bolt Commerce</title>
   <link rel="icon" href="favicon.ico"><link href="style.css" rel="stylesheet"></head>
   <body
     x-data="{ page: 'home', 'darkMode': true, 'stickyMenu': false, 'navigationOpen': false, 'scrollTop': false }"
@@ -112,16 +112,16 @@
           <img src="images/shape-02.svg" alt="shape" class="xc 2xl:ud-block h u p va" />
           <img src="images/shape-03.svg" alt="shape" class="xc 2xl:ud-block h v w va" />
           <img src="images/shape-04.svg" alt="shape" class="h q r" />
-          <img src="images/hero.png" alt="Woman" class="h q r ua" />
+          <img src="images/landing.png" alt="Woman" class="h q r ua" />
         </div>
 
         <!-- Hero Content -->
         <div class="bb ze ki xn 2xl:ud-px-0">
           <div class="tc _o">
             <div class="animate_left jn/2">
-              <h1 class="fk vj zp or kk wm wb">We specialize in UI/UX, Web Development, Digital Marketing.</h1>
+              <h1 class="fk vj zp or kk wm wb">Your ECommerce Store made in a minute.</h1>
               <p class="fq">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque fringilla magna mauris. Nulla fermentum viverra sem eu rhoncus consequat varius nisi quis, posuere magna.
+                Start for <b>free</b> today.
               </p>
 
               <div class="tc tf yo zf mb">
@@ -130,7 +130,7 @@
                 >
 
                 <span class="tc sf">
-                  <a href="#" class="inline-block ek xj kk wm"> Call us (0123) 456 – 789 </a>
+                  <a href="#" class="inline-block ek xj kk wm"> Call us (+971) 544575935 </a>
                   <span class="inline-block">For any question or concern</span>
                 </span>
               </div>
@@ -202,8 +202,8 @@
             <!-- About Content -->
             <div class="animate_right jn/2">
               <h4 class="ek yj mk gb">Why Choose Us</h4>
-              <h2 class="fk vj zp pr kk wm qb">We Make Our customers happy by giving Best services.</h2>
-              <p class="uo">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum.</p>
+              <h2 class="fk vj zp pr kk wm qb">We Make Our customers happy by giving Best services fast.</h2>
+              <p class="uo">With Bolt Commerce, you can launch your online store quickly and easily, empowering you to reach customers worldwide. Our streamlined platform allows you to set up your store in just 3 minutes, so you can focus on what matters most: growing your business.</p>
 
               <a href="https://www.youtube.com/watch?v=xcJtL7QggTI" data-fslightbox class="vc wf hg mb">
                 <span class="tc wf xf be dd rg i gh ua">
@@ -374,7 +374,7 @@
       <section class="lj tp kr">
         <!-- Section Title Start -->
         <div
-          x-data="{ sectionTitle: `We Offer The Best Quality Service for You`, sectionTitleText: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor eros. Donec vitae tortor lacus. Phasellus aliquam ante in maximus.`}"
+          x-data="{ sectionTitle: `We Offer The Best Quality Service for You`, sectionTitleText: `Seamlessly connect your store with popular third-party services, including shipping providers, analytics tools, and more. Expand your capabilities and streamline your operations with ease.`}"
         >
           <div class="animate_top bb ze rj ki xn vq">
     <h2
@@ -394,43 +394,43 @@
             <!-- Service Item -->
             <div class="animate_top sg oi pi zq ml il am cn _m">
               <img src="images/icon-04.svg" alt="Icon" />
-              <h4 class="ek zj kk wm nb _b">Crafted for Startups</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h4 class="ek zj kk wm nb _b">Lightning-Fast Setup</h4>
+              <p>Our streamlined process ensures that you can have your online store ready in just 3 simple steps.</p>
             </div>
 
             <!-- Service Item -->
             <div class="animate_top sg oi pi zq ml il am cn _m">
               <img src="images/icon-05.svg" alt="Icon" />
-              <h4 class="ek zj kk wm nb _b">High-quality Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h4 class="ek zj kk wm nb _b">Beautifully Crafted Templates</h4>
+              <p>We offer a wide range of professionally designed templates that cater to every industry and style.</p>
             </div>
 
             <!-- Service Item -->
             <div class="animate_top sg oi pi zq ml il am cn _m">
               <img src="images/icon-06.svg" alt="Icon" />
-              <h4 class="ek zj kk wm nb _b">All Essential Sections</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h4 class="ek zj kk wm nb _b">Seamless Integration</h4>
+              <p>Bolt Commerce seamlessly integrates with popular payment gateways, shipping providers, and other essential tools to streamline your operations.</p>
             </div>
 
             <!-- Service Item -->
             <div class="animate_top sg oi pi zq ml il am cn _m">
               <img src="images/icon-07.svg" alt="Icon" />
-              <h4 class="ek zj kk wm nb _b">Speed Optimized</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h4 class="ek zj kk wm nb _b">Mobile-Optimized Experience</h4>
+              <p>Our templates are fully responsive and optimized for mobile devices, ensuring that your store looks stunning and functions flawlessly on smartphones and tablets.</p>
             </div>
 
             <!-- Service Item -->
             <div class="animate_top sg oi pi zq ml il am cn _m">
               <img src="images/icon-05.svg" alt="Icon" />
-              <h4 class="ek zj kk wm nb _b">Fully Customizable</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h4 class="ek zj kk wm nb _b">Powerful Features</h4>
+              <p>Bolt Commerce comes packed with a suite of powerful features to supercharge your online store. From inventory management, we've got everything you need to succeed.</p>
             </div>
 
             <!-- Service Item -->
             <div class="animate_top sg oi pi zq ml il am cn _m">
               <img src="images/icon-06.svg" alt="Icon" />
-              <h4 class="ek zj kk wm nb _b">Regular Updates</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h4 class="ek zj kk wm nb _b">Secure and Reliable</h4>
+              <p>We prioritize the safety of your data and your customers' information, so you can focus on what matters most – growing your business.</p>
             </div>
           </div>
         </div>
@@ -448,7 +448,7 @@
 
         <!-- Section Title Start -->
         <div
-          x-data="{ sectionTitle: `We Offer Great Affordable Premium Prices.`, sectionTitleText: `It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using.`}"
+          x-data="{ sectionTitle: `We Offer Great Affordable Premium Prices.`, sectionTitleText: `Flexible plans to suit your budget, with transparent pricing and no hidden fees. Choose the perfect plan for your business needs.`}"
         >
           <div class="animate_top bb ze rj ki xn vq">
     <h2
@@ -487,7 +487,7 @@
                 <div class="tc wf xf kg cc">
                   <h2
                     :class="plan.name == 'Basic' ? 'text-green-500' : ''"
-                    x-text="`$${billPlan == 'monthly' ? plan.price.monthly : plan.price.annually}`"
+                    x-text="`AED ${billPlan == 'monthly' ? plan.price.monthly : plan.price.annually}`"
                     class="fk _j kk wm"
                   ></h2>
                   <span x-text="billPlan == 'monthly' ? '/per month' : '/per year'" class="sc ak kk wm"></span>
@@ -1348,24 +1348,24 @@
             {
               name: 'Starter',
               price: {
-                monthly: 29,
-                annually: 29 * 12 - 199,
+                monthly: 149,
+                annually: 149 * 12 - 199,
               },
               features: ['400 GB Storaget', 'Unlimited Photos & Videos', 'Exclusive Support'],
             },
             {
               name: 'Growth Plan',
               price: {
-                monthly: 59,
-                annually: 59 * 12 - 100,
+                monthly: 399,
+                annually: 399 * 12 - 100,
               },
               features: ['400 GB Storaget', 'Unlimited Photos & Videos', 'Exclusive Support'],
             },
             {
               name: 'Business',
               price: {
-                monthly: 139,
-                annually: 139 * 12 - 100,
+                monthly: 699,
+                annually: 699 * 12 - 100,
               },
               features: ['400 GB Storaget', 'Unlimited Photos & Videos', 'Exclusive Support'],
             },
