--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </p>
 
               <div class="tc tf yo zf mb">
-                <a href="#" class="ek jk lk gh gi hi rg ml il vc _d _l"
+                <a href="https://boltec.azurewebsites.net/" class="ek jk lk gh gi hi rg ml il vc _d _l"
                   >Get Started Now</a
                 >
 
