--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </p>
 
               <div class="tc tf yo zf mb">
-                <a href="https://boltec.azurewebsites.net/" class="ek jk lk gh gi hi rg ml il vc _d _l"
+                <a href="https://boltec.azurewebsites.net/login" class="ek jk lk gh gi hi rg ml il vc _d _l"
                   >Get Started Now</a
                 >
 
@@ -1050,7 +1050,7 @@
             </div>
 
             <div class="animate_top w-full nn/5 vo/3 vk sg hh sm yh tq">
-              <form action="https://formbold.com/s/unique_form_id" method="POST">
+              <form action="https://formbold.com/s/oDGAp" method="POST">
                 <div class="tc sf yo ap zf ep qb">
                   <div class="vd to/2">
                     <label class="rc ac" for="fullname">Full name</label>
