--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <!-- Team Item -->
             <div class="animate_top rj">
               <div class="c i pg z-1">
-                <img class="vd" src="images/Aaqib.jpg" alt="Team" />
+                <img class="vd" src="images/team-01.png" alt="Team" />
 
                 <div class="ef im nl il">
                   <span class="h -ud-left-5 -ud-bottom-21 rc de gd gh if wa"></span>
@@ -282,7 +282,7 @@
                 </div>
               </div>
 
-              <h4 class="yj go kk wm ob zb">Aaqib Khan</h4>
+              <h4 class="yj go kk wm ob zb">Tipsy Bartender</h4>
               <p>Software Developer</p>
             </div>
 
