--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 >
 
                 <span class="tc sf">
-                  <a href="#" class="inline-block ek xj kk wm"> Call us (+971) 544575935 </a>
+                  <a href="#" class="inline-block ek xj kk wm"> Call us (+971) 506001945 </a>
                   <span class="inline-block">For any question or concern</span>
                 </span>
               </div>
@@ -147,7 +147,7 @@
             <!-- Small Features Item -->
             <div class="animate_top kn to/3 tc cg oq">
               <div class="tc wf xf cf ae cd rg mh">
-                <img src="images/icon-01.svg" alt="Icon" />
+                <img src="images/insta.webp" alt="Icon" />
               </div>
               <div>
                 <h4 class="ek yj go kk wm xb">24/7 Support</h4>
