--- a/index.html
+++ b/index.html
@@ -112,14 +112,15 @@
           <img src="images/shape-02.svg" alt="shape" class="xc 2xl:ud-block h u p va" />
           <img src="images/shape-03.svg" alt="shape" class="xc 2xl:ud-block h v w va" />
           <img src="images/shape-04.svg" alt="shape" class="h q r" />
-          <img src="images/landing.png" alt="Woman" class="h q r ua" />
+          <img src="images/calps.png" style="padding-top: 50px;" alt="Woman" class="h q r ua" />
         </div>
 
         <!-- Hero Content -->
         <div class="bb ze ki xn 2xl:ud-px-0">
           <div class="tc _o">
             <div class="animate_left jn/2">
-              <h1 class="fk vj zp or kk wm wb">Your ECommerce Store made in a minute.</h1>
+              <h1 class="fk vj zp or kk wm wb">Unlocking future of chatbots with AI</h1>
+              <!-- <span style="color:#0cc0df;">r</span>apid <span style="color:#0cc0df;">r</span>esponse.&nbsp;&nbsp; -->
               <p class="fq">
                 Start for <b>free</b> today.
               </p>
@@ -158,7 +159,7 @@
             <!-- Small Features Item -->
             <div class="animate_top kn to/3 tc cg oq">
               <div class="tc wf xf cf ae cd rg nh">
-                <img src="images/icon-02.svg" alt="Icon" />
+                <img src="images/whatsapp.jpg" alt="Icon" />
               </div>
               <div>
                 <h4 class="ek yj go kk wm xb">Take Ownership</h4>
@@ -169,7 +170,7 @@
             <!-- Small Features Item -->
             <div class="animate_top kn to/3 tc cg oq">
               <div class="tc wf xf cf ae cd rg oh">
-                <img src="images/icon-03.svg" alt="Icon" />
+                <img src="images/messenger.png" alt="Icon" />
               </div>
               <div>
                 <h4 class="ek yj go kk wm xb">Multiple Stores</h4>
