--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <div class="bb ze ki xn 2xl:ud-px-0 oo wf yf i">
     <div class="vd to/4 tc wf yf">
       <a href="index.html">
-        <img class="om" src="images/logo-light.svg" alt="Logo Light" />
-        <img class="xc nm" src="images/logo-dark.svg" alt="Logo Dark" />
+        <img class="om" src="images/1.1.png" style="height: 50px;" alt="Logo Light" />
+        <img class="xc nm" src="images/3.1.png" style="height: 55px;" alt="Logo Dark" />
       </a>
 
       <!-- Hamburger Toggle BTN -->
