--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <!-- Small Features Item -->
             <div class="animate_top kn to/3 tc cg oq">
               <div class="tc wf xf cf ae cd rg nh">
-                <img src="images/whatsapp.jpg" alt="Icon" />
+                <img src="images/whatsapp.webp" alt="Icon" />
               </div>
               <div>
                 <h4 class="ek yj go kk wm xb">Take Ownership</h4>
